[package]
name = "dc-next-client"
version = "0.1.0"
authors = ["digifiedquire"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.17"
strum_macros = "0.17"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17"
anyhow = "1.0.32"
serde_json = "1.0.57"
shared = { path = "./shared" }
yewtil = "0.3.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
  'Element',
  'ScrollToOptions',
  'UiEvent',
  'HtmlInputElement'
]

[dev-dependencies]
wasm-bindgen-test = "0.3"


[workspace]
members = [
  "rpc-server",
  "shared"
]
