[package]
name = "dc40-frontend"
version = "0.1.0"
authors = ["digifiedquire"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.20"
strum_macros = "0.20"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = { version = "0.18", features = ["bincode"] }
anyhow = "1.0.32"
shared = { path = "../shared", package = "dc40-shared" }
yewtil = "0.4.0"
linkify = "0.7"
chrono = { version = "0.4.15", features = ["serde", "wasmbind"] }
yew_form = { git = "https://github.com/dignifiedquire/yew_form", branch = "yew-18"}
yew_form_derive = { git = "https://github.com/dignifiedquire/yew_form", branch = "yew-18"}
validator = "0.14"
validator_derive = "0.14"
gloo = "*"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
  'Element',
  'ScrollToOptions',
  'UiEvent',
  'HtmlInputElement',
  'Notification',
  'NotificationOptions',
  'File',
  'FileList'
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

