[package]
name = "dc-next-rpc-server"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"

[dependencies]
# deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", branch = "master"}
deltachat = { path = "../../deltachat/deltachat-core-rust" }
async-std = "1.5.0"
serde = "1.0.104"
async-tungstenite = { version = "0.4", features = ["async-std-runtime"] }
femme = "1.3.0"
futures = "0.3.4"
log = "0.4.8"
serde_json = "1.0.47"
anyhow = "1.0.26"
broadcaster = "1.0.0"
dirs = "2.0.2"
lazy_static = "1.4.0"
glob = "0.3.0"

