[package]
name = "dc40-backend"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
description = "dc40"

default-run = "dc40-backend"
build = "src/build.rs"

[dependencies]
shared = { path = "../shared", package = "dc40-shared" }
deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", branch = "master"}
async-std = "1.6.0"
async-tungstenite = { version = "0.12", features = ["async-std-runtime"] }
femme = "1.3.0"
futures = "0.3.4"
log = "0.4.8"
bincode = "1.3"
anyhow = "1.0.26"
broadcaster = "1.0.0"
dirs = "3.0"
lazy_static = "1.4.0"
glob = "0.3.0"
num-traits = "0.2.12"
chrono = "0.4.15"
tauri = { version = "1.0.0-beta.4", features = ["api-all", "custom-protocol"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.2" }
