[package]
name = "dc40-backend"
version = "0.1.0"
description = "dc40"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
license = ""
repository = ""
default-run = "app"
edition = "2018"

[dependencies]
tauri = { version = "1.0.0-beta.5", features = ["api-all", "dialog-open", "dialog-save"] }
shared = { path = "../shared", package = "dc40-shared" }
deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", branch = "master"}
async-std = "~1.9.0"
async-tungstenite = { version = "0.14", features = ["async-std-runtime"] }
femme = "2.1.1"
futures = "0.3.4"
log = "0.4.8"
bincode = "1.3"
anyhow = "1.0.26"
broadcaster = "1.0.0"
dirs = "3.0"
lazy_static = "1.4.0"
glob = "0.3.0"
num-traits = "0.2.12"
chrono = "0.4.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1.0"

[build-dependencies]
tauri-build = "1.0.0-beta.3"

[features]
default = []

[[bin]]
name = "app"
path = "src/main.rs"

[profile.dev]
opt-level = 3
